--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 .btn-dark {
   text-transform: uppercase;
-  border-radius: 100;
+  border-radius: 5px;
 }
 
 .carrito {
@@ -783,14 +783,7 @@ button:not(:disabled),
       rgba(1, 120, 255, 0.4),
       rgba(1, 120, 255, 0.4)
     ),
-    url("../img/header.jpg");
-  /** TODO: Eliminar la sig linea **/
-  background-image: linear-gradient(
-      to right,
-      rgba(1, 120, 255, 0.4),
-      rgba(1, 120, 255, 0.4)
-    ),
-    url("../public/img/header.jpg");
+    url("/img/header.jpg");
   background-position: 50%;
   background-size: cover;
   position: relative;
@@ -810,4 +803,9 @@ button:not(:disabled),
     animation-name: animarImagen;
     z-index: 10;
   }
+}
+
+.bg-guitars {
+  background-color: var(--bs-gray-100);
+  border-radius: 5px;
 }
